Preserve format of finished arguments when tab-completing